--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -14,6 +14,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rfs": "^9.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
