--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -10,10 +10,13 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
+    "react-visibility-sensor": "^5.1.1",
     "rfs": "^9.0.3",
     "web-vitals": "^1.1.0"
   },
