--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
     "file-loader": "^6.1.1",
+    "firebase": "^8.4.1",
     "hamburger-react": "^2.4.0",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
