--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.1",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
