--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -11,8 +11,9 @@
     "firebase": "^8.4.1",
     "hamburger-react": "^2.4.0",
     "node-sass": "^4.14.1",
+    "package.json": "^2.0.1",
     "path": "^0.12.7",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.1",
     "react-countup": "^4.3.3",
