--- a/study-system-app/package.json
+++ b/study-system-app/package.json
@@ -2,6 +2,7 @@
   "name": "study-system-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
